--- a/client/src/lang/en.json
+++ b/client/src/lang/en.json
@@ -4,5 +4,9 @@
   "menu_item_my_routes": "My Routes",
   "menu_item_about": "About",
   "menu_item_login": "Login",
-  "menu_item_logout": "Logout"
+  "menu_item_logout": "Logout",
+  "login_title": "Login",
+  "login_form_email_label": "E-Mail",
+  "login_form_email_invalid": "E-Mail must be valid",
+  "check_your_mail": "We've sent you a login-link, please check your inbox."
 }
