current state of the client

--- a/client/src/lang/en.json
+++ b/client/src/lang/en.json
@@ -93,7 +93,8 @@
       "step": {
         "where": "Where",
         "line": "Line",
-        "when": "When"
+        "when": "When",
+        "details": "Details"
       },
 
       "form": {
